objects/Account_LoanContract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account/LoanContracts</relationshipLabel>
        <relationshipName>Account_LoanContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Account/LoanContracts</relationshipLabel>
        <relationshipName>Account_LoanContracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Account/LoanContracts</relationshipLabel>
        <relationshipName>Account_LoanContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account/LoanContract</label>
    <nameField>
        <displayFormat>ACC/LAI-{000}</displayFormat>
        <label>Account/LoanContract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account/LoanContracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Customer_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Please provide customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LoanContract_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Loan_Contract__c)</errorConditionFormula>
        <errorDisplayField>Loan_Contract__c</errorDisplayField>
        <errorMessage>Please provide Loan Contract.</errorMessage>
    </validationRules>
</CustomObject>